Fix: part of destination title not visible

--- a/sass/_destination.scss
+++ b/sass/_destination.scss
@@ -76,7 +76,8 @@ $number-of-tabs:4;
 
     h1 {
       width:67%;
-      height:1em;
+      height:1.5em;
+      margin-bottom:-2px;
       overflow:hidden;
       text-align:center;
     }
